RESOLVED FIXED208781
Crash in -[_WKRemoteObjectRegistry _invokeMethod:] block when calling a reply block after the web view has deallocated
https://bugs.webkit.org/show_bug.cgi?id=208781
Summary Crash in -[_WKRemoteObjectRegistry _invokeMethod:] block when calling a reply...
David Quesada
Reported 2020-03-07 18:29:42 PST
Attachments
Patch (9.53 KB, patch)
2020-03-07 18:49 PST, David Quesada
no flags
David Quesada
Comment 1 2020-03-07 18:49:28 PST
WebKit Commit Bot
Comment 2 2020-03-07 20:01:05 PST
Comment on attachment 392927 [details] Patch Clearing flags on attachment: 392927 Committed r258095: <https://trac.webkit.org/changeset/258095>
WebKit Commit Bot
Comment 3 2020-03-07 20:01:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.