Crash in -[_WKRemoteObjectRegistry _invokeMethod:] block when calling a reply block after the web view has deallocated https://bugs.webkit.org/show_bug.cgi?id=208781 rdar://problem/60061016

Reviewed by Alex Christensen.

Source/WebKit:

Covered by API tests.

* Shared/API/Cocoa/_WKRemoteObjectRegistry.mm:
(-[_WKRemoteObjectRegistry _invokeMethod:]):
    When the app calls a reply block for a message from the injected bundle, add a nil
    check for the underlying WebKit::RemoteObjectRegistry before attempting to send the
    reply details back to the web process. It's possible that before this block is
    called, the associated web view could have been deallocated, which would invalidate
    this _WKRemoteObjectRegistry.

Tools:

Add a test that recreates the conditions of this crash:
- Send a message from the injected bundle to the UI process that contains a reply block.
- Hold a reference to the reply block.
- Let the web view deallocate.
- Call the block, and expect not to crash.

* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistry.h:
(localObjectInterface):
* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistry.mm:
(-[LocalObject doSomethingWithCompletionHandler:]):
(TEST):
* TestWebKitAPI/Tests/WebKitCocoa/RemoteObjectRegistryPlugIn.mm:
(-[RemoteObjectRegistryPlugIn callUIProcessMethodWithReplyBlock]):


Canonical link: https://commits.webkit.org/221704@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258095 268f45cc-cd09-0410-ab3c-d52691b4dbfc